[tool.poetry]
name = "nasa-tlx-py"
version = "0.1.0"
description = ""
authors = ["takumi-nishimura <clp13218@nitech.jp>"]
readme = "README.md"
packages = [{include = "nasa_tlx_py"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
